upd and add faq page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Lampa Плагины</title>
     <link rel="apple-touch-icon" sizes="180x180" href="https://yumata.github.io/lampa/icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="https://yumata.github.io/lampa/icons/favicon-32x32.png">
@@ -11,6 +11,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" rel="stylesheet"/>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="list.js"></script>
     <script src="scripts/script.js" defer></script>
 
@@ -25,19 +27,23 @@
         </a>
         <nav>
             <ul>
-                <li><a href="#">О нас</a></li>
-                <li><a href="#">Поддержка</a></li>
+                <li><a href="faq.html">FAQ</a></li>
+                <li><a href="https://t.me/lampa_kit">Поддержка</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <h2 class="header-text" style="text-align: center;">Список плагинов для онлайн-кинотеатра Lampa</h2>
         <div class="search-bar">
-            <input type="text" id="searchInput" placeholder="Поиск плагинов...">
+            <input type="text" id="searchInput" placeholder="Поиск плагинов от разработчиков">
         </div>
-        <div class="tabs" id="tabsContainer">
-            <div id="overflow-mobile"></div>
+        <div id="tabsContainer" class="tabs-container">
+            <div id="overflow-mobile" class="swiper">
+                <div class="swiper-wrapper"></div>
+            </div>
         </div>
+        <div>
+        <!-- <div class="plugin-counter">Количество плагинов: 0</div> -->
         <div class="card-grid" id="cardGrid"></div>
     </main>
 </body>
